# squirrel-reminder

./: .env.production  .gitignore  BUILD_APK_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEPLOY_STATUS.md  GITHUB_BUILD_GUIDE.md  METHODOLOGY_PLAYBOOK.md  QUICK_START.md  READY_TO_DEPLOY.md  REPO-STRUCTURE-EXPLAINED.md
.github/workflows/: blank.yml  build-apk.yml
PLAYBOOKS/: project_lessons_learned.md
services/m03-trajectory/: Dockerfile  Dockerfile.optimized  INTEGRATION_STATUS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  mock_server.ps1
services/m03-trajectory/config/: cache.yaml  config.yaml  prometheus.yml  redis.conf
services/m03-trajectory/docs/: benchmark-fast-smooth.md  (+11 more)
squirrel-mobile/: APK_READY.md  BUILD_APK.md  BUILD_SIMPLE.md  DEPLOY_AND_BUILD.md  DEPLOY_LOG.md  Dockerfile  PROJECT_SUMMARY.md  README.md  build-apk-simple.bat  build-apk.sh  capacitor.config.json  credentials.template.yaml  deploy-production.sh  docker-compose.yml  index.html  index.production.html  install-and-build.ps1  manifest.json  package.json  server.go
squirrel-mobile/android/: build.gradle  gradle.properties  gradlew  settings.gradle
squirrel-services/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
squirrel-services/data/: metro_stations.json
squirrel-services/docker/: .env.example  Dockerfile.m03  Dockerfile.m04  docker-compose.yml  prometheus.yml
squirrel-services/docs/: API.md
squirrel-services/k8s/: ingress.yaml  m03-deployment.yaml  m04-deployment.yaml  namespace.yaml  secret.yaml
squirrel-services/m01-state-engine/: Dockerfile  go.mod
squirrel-services/m02-alert-service/: go.mod
squirrel-services/m03-trajectory/: go.mod
squirrel-services/m04-insight-engine/: pyproject.toml  requirements.txt
squirrel-services/m04-insight-engine/src/: config.py  event_detector.py  main.py  models.py  profiler.py
squirrel-services/m04-insight-engine/src/api/: routes.py
squirrel-services/m04-insight-engine/src/db/: redis_client.py  tidb_client.py
squirrel-services/m04-insight-engine/src/services/: m03_client.py
squirrel-services/m04-insight-engine/tests/: conftest.py  test_event_detector.py  test_profiler.py
squirrel-services/m05-biz-intel/: requirements.txt
squirrel-services/scripts/: benchmark.sh  deploy.sh  generate_test_data.py  load_test.go
(+89 files in other folders)
